--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+div {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +40,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#opaco {
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+}
+#letras {
+  font-family: 'Rubik Mono One', sans-serif;
+  font-size: 10px;
+  text-shadow: black 2px 2px;
+  display: block;
+  position: absolute;
+  text-align: center;
+  color: white;
+  padding-top: 10%;
+  z-index: 10;
+}
+#panytec {
+  background-color: #2d436f;
+  color: black;
+}
+#comu {
+  background-color: #81cc76;
+}
+#senso {
+  background-color: #f5db57;
+}
+#sire {
+  background-color: #e16453;
+  margin-bottom: 30px;
 }
