--- a/src/views/categorias.css
+++ b/src/views/categorias.css
@@ -3,7 +3,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: scroll;    
     padding-top: 15px;
     padding-bottom: 150px;
+    height: 100vh;
 }
