--- a/src/views/categorias.css
+++ b/src/views/categorias.css
@@ -6,5 +6,5 @@
     background-attachment: scroll;    
     padding-top: 15px;
     padding-bottom: 150px;
-    height: 100vh;
+    height: 100%;
 }
