Estilado casi todo

--- a/src/views/Styles/productos.css
+++ b/src/views/Styles/productos.css
@@ -1,5 +1,5 @@
 .contenedorPro{
-    background-image: url(../assets/images/fondo1.jpeg);
+    background-image: url(../../assets/images/fondo1.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
