--- a/src/views/Styles/categorias.css
+++ b/src/views/Styles/categorias.css
@@ -1,10 +1,11 @@
 .contenedorCat {
-    background-image: url(../assets/images/fondo2.jpg);
+    background-image: url(../../assets/images/fondo2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: scroll;    
     padding-top: 15px;
     padding-bottom: 150px;
-    height: 100%;
+    height: min-content;
+    min-height: 45vmax;
 }
