--- a/src/components/Styles/formulario.css
+++ b/src/components/Styles/formulario.css
@@ -1,9 +1,9 @@
 .formulario {
-    width: 35rem;
-    border-style: ridge;
+    max-width: 35rem;    
     padding: 20px;
     border-radius: 40px;
     display: block;
-    margin: auto auto;        
+    margin: auto auto 20px;     
+    background: white;   
 }
 
